<resources>
    <string name="app_name">Togepic</string>
    <string name="please_login">Log in to continue</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_again">Hello again!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">Email</string>
    <string name="your_e_mail">Your email address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="bio">Bio</string>
    <string name="your_bio">Your bio</string>
    <string name="groupe_bio">Group bio</string>
    <string name="profile">Profile</string>
    <string name="pictures">Pictures</string>
    <string name="user_picture">User picture</string>
    <string name="username">Username</string>
    <string name="password_verification">Password verification</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="quit">Quit</string>
    <string name="add_group_desc">Add a group</string>
    <string name="search_group">Search group</string>
    <string name="search_user">Search user</string>
    <string name="no_account">No account?</string>
    <string name="create_account_1">Create an account</string>
    <string name="create_account_2">Continue</string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_account_valid">Account created successfully</string>
    <string name="modify_account_valid">Information changed successfully</string>
    <string name="check_your_mails">Check your emails!</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait…</string>
    <string name="communication_fail">Failed to communicate with API</string>
    <string name="communication_fail_status">Failed to communicate with API, status code: </string>
    <string name="empty"> </string>
    <string name="modification">Modification</string>
    <string name="invitation">Invitation</string>
    <string name="information">Information</string>
    <string name="administration">Administration</string>
    <string name="send_verification_email">Send verification email</string>
    <string name="account_deleted">Account deleted</string>
    <string name="groupe_deleted">Group deleted</string>
    <string name="groupe_left">Group left</string>
    <string name="group_picture">Group picture</string>
    <string name="default_group">Group name</string>
    <string name="default_group_name">Group profile</string>
    <string name="no_invitation_yet">No invitation yet</string>
    <string name="no_member_yet">No member yet</string>
    <string name="no_group_yet">No group yet</string>
    <string name="no_pictures_yet">No pictures yet</string>
    <string name="no_message_yet">No message yet</string>
    <string name="invitation_accepted">Invitation accepted</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="invitation_refused">Invitation refused</string>
    <string name="user_ejected">User ejected</string>
    <string name="role_changed">Role changed</string>
    <string name="reader_mode">You are in reader mode</string>
    <string name="message_sent">Message successfully sent</string>

    <string name="role_editor">EDITOR</string>
    <string name="role_reader">READER</string>
    <string name="role_admin">ADMIN</string>
    <string-array name="roles">
        <item>EDITOR</item>
        <item>READER</item>
        <item>ADMIN</item>
    </string-array>

    <string name="err_bad_name">A name must be provided</string>
    <string name="err_bad_email">A correct email must be provided</string>
    <string name="err_bad_password">A password longer than 5 characters must be provided</string>
    <string name="err_bad_second_password">The two passwords do not match</string>
    <string name="err_email_already_used">An account with this email address already exists</string>
    <string name="err_user_info_missing">Missing necessary information</string>
    <string name="err_privilege">You do not have enough right</string>
    <string name="err_no_user_existing">No users match these credentials</string>
    <string name="err_no_user_no_group">User or group does not exist</string>
    <string name="err_no_group">Group does not exist</string>
    <string name="err_no_user">User does not exist</string>-
    <string name="err_email_already_verified_or_no_user_existing">Email already verified</string>
    <string name="err_session_time_out">Session timed out</string>
    <string name="err_unknown">An unknown error occurred</string>
    <string name="err_contact_server">Cannot contact server</string>
    <string name="err_user_already_group">User already in group</string>
    <string name="err_user_not_verified">Your account must be verified</string>
    <string name="err_message_sent">Error sending</string>
    <string name="err_empty_message">Empty message</string>
    <string name="invalid_email">Your email address is not valid</string>

    <string name="api_rest_url" translatable="false">http://10.0.2.2:8000/togepic</string>
    <string name="api_rest_user" translatable="false">/users/</string>
    <string name="api_rest_users" translatable="false">/users?name=</string>
    <string name="api_rest_groupe" translatable="false">/groupes/</string>
    <string name="api_rest_groupes" translatable="false">/groupes?name=</string>
    <string name="api_rest_login" translatable="false">/login/</string>
    <string name="api_rest_invitation" translatable="false">/invitations/</string>
    <string name="api_rest_send_verification_email" translatable="false">/users/newToken</string>

    <string name="group_name">Group name</string>
    <string name="description">Description</string>
    <string name="group_desc">Group description</string>
    <string name="is_private">Is Private</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
</resources>
