<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignUpActivity"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksandbold"
                android:text="@string/sign_up"
                android:textColor="@color/sand_togepic"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/userPicture"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/image_background"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"
                    android:contentDescription="@string/user_picture" />

                <ImageView
                    android:id="@+id/addProfilePictureText"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_photo_camera_24"
                    app:tint="@color/light_gray_togepic" />


            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/name"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_togepic"
                android:hint="@string/your_name"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/e_mail"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/userMail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_togepic"
                android:hint="@string/your_e_mail"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/password"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:hint="@string/empty"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/password_verification"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/userSecondPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:hint="@string/empty"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/pink_togepic"
                android:fontFamily="@font/asapbold"
                android:text="@string/create_account_2"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_5sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:fontFamily="@font/asapmedium"
                    android:text="@string/have_an_account"
                    android:textColor="@color/light_gray_togepic"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/newAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/asapmedium"
                    android:text="@string/sign_in"
                    android:textColor="@color/pink_togepic"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
