<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10ssp">


        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp">

                <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/newGroupPicture"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:background="@drawable/image_background"
                        android:scaleType="centerCrop"
                        app:riv_oval="true"
                        android:contentDescription="@string/group_picture" />

                <ImageView
                        android:id="@+id/newGroupPictureText"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_photo_camera_24"
                        app:tint="@color/light_gray_togepic" />

        </FrameLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/group_name"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

        <EditText
                android:id="@+id/groupName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:hint="@string/group_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_togepic"
                android:textSize="@dimen/_13ssp" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/description"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

        <EditText
                android:id="@+id/groupDesc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:hint="@string/group_desc"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_togepic"
                android:textSize="@dimen/_13ssp" />

        <Switch
                android:id="@+id/isPrivate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_private" android:minHeight="48dp" />

        <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/pink_togepic"
                android:fontFamily="@font/asapbold"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_5sdp" />

        <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/gray_togepic"
                android:fontFamily="@font/asapbold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_5sdp" />
</LinearLayout>
