<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignInActivity"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:padding="@dimen/_24sdp"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="290dp"
                android:layout_height="170dp"
                android:src="@drawable/togepic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/quicksandbold"
                android:text="@string/sign_in"
                android:textColor="@color/sand_togepic"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/please_login"
                android:textColor="@color/light_gray_togepic"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/e_mail"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:hint="@string/your_e_mail"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray_togepic"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/password"
                android:textColor="@color/blue_togepic"
                android:textSize="@dimen/_10ssp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/asapmedium"
                android:hint="@string/empty"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="@dimen/_13ssp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/pink_togepic"
                android:fontFamily="@font/asapbold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_5sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="31dp">

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/quicksandbold"
                android:text="@string/no_account"
                android:textColor="@color/sand_togepic"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:fontFamily="@font/asapmedium"
                android:text="@string/create_account_1"
                android:textColor="@color/pink_togepic"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
