<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ProfileModification"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/_12sdp"
    android:paddingLeft="@dimen/_24sdp"
    android:paddingRight="@dimen/_24sdp"
    android:paddingBottom="@dimen/_24sdp">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/inputPicture"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/image_background"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            android:contentDescription="@string/user_picture" />


    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/asapmedium"
        android:text="@string/bio"
        android:textColor="@color/blue_togepic"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informationGroupeFrameLayout" />

    <TextView
        android:id="@+id/inputBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:fontFamily="@font/asapmedium"
        android:text="@string/bio"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/asapmedium"
        android:text="@string/name"
        android:textColor="@color/blue_togepic"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBio" />

    <TextView
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:fontFamily="@font/asapmedium"
        android:text="@string/name"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</LinearLayout>
